--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<img src="http://manuel.abalos.me/images/logo-ironhack.png" />
+<h1>IronHack Cinema</h1>
+
+<router-outlet></router-outlet>
